grammar.js
    source_file: ($) => repeat(choice($._expression, $._value_expression)),

    // A standalone value-producing expression. Filter/matching expressions are
    // boolean, but Transform Rules and Dynamic Redirects use a bare value
    // expression (e.g. `concat("https://", http.host, http.request.uri.path)`,
    // `regex_replace(http.request.uri.path, "^/a", "/b")`) as the rewrite value.
    _value_expression: ($) => choice($.string_func, $.number_func),

    _expression: ($) =>
      choice(
        $.not_expression,
        $.compound_expression,
        $.group,
        $.simple_expression,
        $._bool_lhs,
        $.in_expression,
      ),

    not_expression: ($) => prec(4, seq($.not_operator, $._expression)),

    in_expression: ($) => {
      const in_options = [
        [choice($.ip_field, $.ip_func), choice($.ip_set, $.list)],
        [
          choice($.stringlike_field, $.bytes_field),
          choice($.string_set, $.list),
        ],
        [$._number_lhs, choice($.number_set, $.list)],
      ];

      return choice(
        ...in_options.map(([field_type, target]) =>
          seq(
            field("lhs", field_type),
            field("operator", "in"),
            field("rhs", target),
          ),
        ),
      );
    },

    compound_expression: ($) => {
      const precs = [
        ["&&", 3],
        ["and", 3],
        ["xor", 2],
        ["^^", 2],
        ["or", 1],
        ["||", 1],
      ];

      return choice(
        ...precs.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("lhs", $._expression),
              field("operator", operator),
              field("rhs", $._expression),
            ),
          ),
        ),
      );
    },

    ip_set: ($) => seq("{", repeat1(choice($._ip, $.ip_bounds)), "}"),

    string_set: ($) => seq("{", repeat1($.string), "}"),

    number_set: ($) => seq("{", repeat1(choice($.number, $.number_bounds)), "}"),

    // Inclusive `start..end` range. Valid only inside a `{ }` set.
    number_bounds: ($) =>
      seq(field("start", $.number), "..", field("end", $.number)),

    simple_expression: ($) => {
      const comps = [
        [STRING_COMPARISON_OPS, $.stringlike_field, choice($.string, $.bytes)],
        [REGEX_OPS, $.stringlike_field, $.regex],
        [NUMBER_COMPARISON_OPS, $._number_lhs, $.number],
        [["eq", "ne", "==", "!="], choice($.ip_field, $.ip_func), $._ip],
        // IPs are ordered values in wirefilter: lt/le/gt/ge take a single IP.
        [
          ["lt", "le", "gt", "ge", "<", "<=", ">", ">="],
          choice($.ip_field, $.ip_func),
          choice($.ipv4, $.ipv6),
        ],
      ];

      return choice(
        ...comps.map(([operators, f, type]) =>
          seq(
            field("lhs", f),
            field("operator", choice(...operators)),
            field("rhs", type),
          ),
        ),
      );
    },

    _number_lhs: ($) => choice($.numberlike_field, $.number_func),

    // _string_lhs: ($) => choice($.stringlike_field, $.string_func),

    // functions grouped by return type for use in expressions
    string_func: ($) =>
      choice(
        concatFunc(
          choice($.string, $.stringlike_field),
          choice($.string, $.stringlike_field),
        ),
        lookupFunc($.stringlike_field, choice($.string, $.number)),
        lowerFunc($.stringlike_field),
        regexReplaceFunc(
          choice($.string, $.stringlike_field),
          $.regex,
          $.string,
        ),
        removeBytesFunc(choice($.stringlike_field, $.bytes_field), $.string),
        toStringFunc(
          choice($.numberlike_field, $.ip_field, $.ip_func, $.boollike_field),
        ),
        upperFunc($.stringlike_field),
        urlDecodeFunc($.stringlike_field, $.string),
        uuidv4Func($.stringlike_field),
        decodeBase64Func($.stringlike_field),
        encodeBase64Func(
          choice($.string, $.stringlike_field, $.bytes_field),
          $.string,
        ),
        joinFunc($.string_array, $.string),
        removeQueryArgsFunc($.stringlike_field, $.string),
        sha256Func(choice($.string, $.stringlike_field, $.bytes_field)),
        substringFunc(choice($.stringlike_field, $.bytes_field), $.number),
        wildcardReplaceFunc(
          choice($.stringlike_field, $.bytes_field),
          $.string,
        ),
      ),

    number_func: ($) =>
      choice(
        lenFunc(
          choice(
            $.stringlike_field,
            $.bytes_field,
            $.string_array,
            $.number_array,
          ),
        ),
        bitSliceFunc(choice($.string, $.stringlike_field), $.number),
        lookupJsonIntegerFunc($.stringlike_field, choice($.string, $.number)),
      ),

    bool_func: ($) =>
      choice(
        $.array_func,
        endsWithFunc($.stringlike_field, $.string),
        startsWithFunc($.stringlike_field, $.string),
        isTimedHmacValidV0Func(
          $.string,
          $.stringlike_field,
          $.number,
          choice($.number, $.numberlike_field),
        ),
        hasKeyFunc(
          $.map_string_array_field,
          choice($.string, $.stringlike_field),
        ),
        hasValueFunc(
          choice($.map_string_array_field, $.array_string_field),
          choice($.string, $.number, $.stringlike_field, $.numberlike_field),
        ),
        isJwtPresentFunc($.string),
        isJwtValidFunc($.string),
      ),

    // IP-returning functions (cidr / cidr6).
    array_func: ($) => {
      // Needs to support simple expressions and in and bool
      const in_func = [
        [arrayExpander($.number_array), $.number_set],
        [arrayExpander($.string_array), $.string_set],
      ];
      const inOptions = choice(
        ...in_func.map(([field_type, target]) =>
          seq(
            field("lhs", field_type),
            field("operator", "in"),
            field("rhs", target),
          ),
        ),
      );

      const simple = [
        [STRING_COMPARISON_OPS, arrayExpander($.string_array), $.string],
        [REGEX_OPS, arrayExpander($.string_array), $.regex],
        [NUMBER_COMPARISON_OPS, arrayExpander($.number_array), $.number],
      ];

      const simpleOptions = choice(
        ...simple.map(([operators, f, type]) =>
          seq(
            field("lhs", f),
            field("operator", choice(...operators)),
            field("rhs", type),
          ),
        ),
      );

      return seq(
        field("func", choice("any", "all")),
        "(",
        choice(simpleOptions, inOptions, arrayExpander($.bool_array)),
        ")",
      );
    },

    group: ($) => seq("(", field("inner", $._expression), ")"),

    // An integer literal: decimal or `0x` hex, with an optional leading `-`
    // (wirefilter accepts negatives in value position, e.g. `substring(x, -5)`,
    // `tcp.dstport eq -1`, and `{-20..-10}` ranges). Array/map indices reuse this
    // rule; a negative index is a semantic error the engine rejects, not a
    // syntactic one, so it is left to validation.
    number: ($) =>
      token(seq(optional("-"), choice(/0[xX][0-9a-fA-F]+/, /\d+/))),

    // A byte-sequence literal: hex octet pairs separated by `:`, `-`, or `.`
    // (e.g. `6F:72:67`). A valid RHS for Bytes / String comparisons. Only
    // recognized in value position, so it does not shadow IPv4/IPv6 literals.
    string: ($) => choice($._quoted_string, $.raw_string),

    // A regex value has the same lexical form as a string but is its own node
    // (used after `matches`/`~` and as the pattern of regex_replace) so editors
    // can inject a regex grammar into it — see queries/injections.scm.
    regex: ($) => choice($._quoted_string, $.raw_string),

    _quoted_string: ($) =>
      token(seq('"', repeat(choice(/[^"\\]/, /\\[\s\S]/)), '"')),

    _ip: ($) => choice($.ipv4, $.ipv6, $.ip_range),

    ipv4: ($) =>
      /(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(?:\.(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)){3}/,

    // Full RFC 5952 IPv6, including `::` compression and IPv4-mapped forms.
    // Written bare (no brackets, no quotes), e.g. `2001:db8::1`.
    ipv6: ($) => token(IPV6),

    // CIDR range for either family: IPv4 /0-32 or IPv6 /0-128.
    ip_range: ($) =>
      choice(
        seq(field("ip", $.ipv4), "/", field("mask", /(?:3[0-2]|[12]?[0-9])/)),
        seq(
          field("ip", $.ipv6),
          "/",
          field("mask", /(?:12[0-8]|1[01][0-9]|[0-9]?[0-9])/),
        ),
      ),

    // A named list reference. Custom lists (`$my_list`) and Cloudflare managed
    // lists (`$cf.anonymizer`, `$cf.open_proxies`, …) share the same dotted-name
    // form. Valid as the `in` RHS for IP, string/bytes, and number fields.
    list: ($) => token(seq("$", /[a-z\d_]+(\.[a-z\d_]+)*/)),

    not_operator: ($) => choice("not", "!"),

    number_array: ($) =>
      choice(
        $.array_number_field,
        seq($.map_number_array_field, "[", field("key", $.string), "]"),
        lenFunc($._string_array_expansion),
      ),

    string_array: ($) =>
      choice(
        $.array_string_field,
        seq($.map_string_array_field, "[", field("key", $.string), "]"),
        concatFunc(
          $._string_array_expansion,
          choice($.string, $.stringlike_field),
        ),
        lookupFunc($._string_array_expansion, choice($.string, $.number)),
        lowerFunc($._string_array_expansion),
        regexReplaceFunc($._string_array_expansion, $.regex, $.string),
        removeBytesFunc($._string_array_expansion, $.string),
        toStringFunc(arrayExpander(choice($.number_array, $.bool_array))),
        upperFunc($._string_array_expansion),
        urlDecodeFunc($._string_array_expansion, $.string),
        uuidv4Func($._string_array_expansion),
        splitFunc(choice($.stringlike_field, $.string), $.string, $.number),
      ),

    _string_array_expansion: ($) =>
      arrayExpander(
        choice(
          seq($.map_string_array_field, "[", field("key", "*"), "]"),
          $.string_array,
        ),
      ),

    boollike_field: ($) =>
      choice(
        $.bool_field,
        seq($.bool_array, "[", field("index", $.number), "]"),
        $.bool_func,
        seq($.bool_func, "[", field("index", $.number), "]"),
      ),

    numberlike_field: ($) =>
      choice(
        $.number_field,
        seq($.number_array, "[", field("index", $.number), "]"),
        seq($.number_func, "[", field("index", $.number), "]"),
        // Map<Integer> keyed access, e.g. custom_topic_categories["Politics"].
        seq($.map_number_field, "[", field("key", $.string), "]"),
      ),

    stringlike_field: ($) =>
      choice(
        $.string_field,
        seq($.string_array, "[", field("index", $.number), "]"),
        $.string_func,
        seq($.string_func, "[", field("index", $.number), "]"),
      ),

    // Cloudflare Ruleset Fields
    // see: https://developers.cloudflare.com/ruleset-engine/rules-language/fields/

    number_field: ($) =>
      choice(
        // Standard fields
        "http.request.timestamp.sec",
        "http.request.timestamp.msec",
        "ip.geoip.asnum",
        "ip.src.asnum",
        // Dynamic fields
        "cf.bot_management.score",
        "cf.edge.server_port",
        "cf.threat_score",
        "cf.waf.score",
        "cf.waf.score.sqli",
        "cf.waf.score.xss",
        "cf.waf.score.rce",
        // Magic Firewall fields
        "icmp.type",
        "icmp.code",
        "ip.hdr_len",
        "ip.len",
        "ip.opt.type",
        "ip.ttl",
        "tcp.flags",
        "tcp.srcport",
        "tcp.dstport",
        "udp.dstport",
        "udp.srcport",
        // HTTP request body fields
        "http.request.body.size",
        // HTTP response fields
        "http.response.code",
        "cf.response.1xxx_code",
        // TLS
        "cf.tls_client_hello_length",
        // LLM (Firewall for AI)
        "cf.llm.prompt.injection_score",
        "cf.llm.prompt.token_count",
        // Edge / timings
        "cf.edge.l4.delivery_rate",
        "cf.timings.edge_msec",
        "cf.timings.origin_ttfb_msec",
        "cf.timings.worker_msec",
        "cf.timings.client_tcp_rtt_msec",
        "cf.timings.client_quic_rtt_msec",
        // Magic Firewall
        "ip.dst.asnum",
      ),

    ip_field: ($) =>
      choice(
        // Standard fields
        "ip.src",
        // Dynamic fields
        "cf.edge.server_ip",
        // Magic Firewall fields
        "ip.dst",
      ),

    string_field: ($) =>
      choice(
        // Standard fields
        "http.cookie",
        "http.host",
        "http.referer",
        "http.request.full_uri",
        "http.request.method",
        "http.request.uri",
        "http.request.uri.path",
        "http.request.uri.path.extension",
        "http.request.uri.query",
        "http.user_agent",
        "http.request.version",
        "http.x_forwarded_for",
        "ip.src.lat",
        "ip.src.lon",
        "ip.src.city",
        "ip.src.postal_code",
        "ip.src.metro_code",
        "ip.src.region",
        "ip.src.region_code",
        "ip.src.timezone.name",
        "ip.geoip.continent",
        "ip.geoip.country",
        "ip.geoip.subdivision_1_iso_code",
        "ip.geoip.subdivision_2_iso_code",
        "ip.src.continent",
        "ip.src.country",
        "ip.src.subdivision_1_iso_code",
        "ip.src.subdivision_2_iso_code",
        "raw.http.request.full_uri",
        "raw.http.request.uri",
        "raw.http.request.uri.path",
        "raw.http.request.uri.query",
        // Dynamic fields
        "cf.bot_management.ja3_hash",
        "cf.verified_bot_category",
        "cf.hostname.metadata",
        "cf.worker.upstream_zone",
        // Magic Firewall fields
        "cf.colo.name",
        "cf.colo.region",
        "icmp",
        "ip",
        "ip.dst.country",
        "tcp",
        "udp",
        // HTTP request body fields
        "http.request.body.raw",
        "http.request.body.mime",
        // HTTP response fields
        "cf.response.error_type",
        "http.response.content_type.media_type",
        "raw.http.request.uri.path.extension",
        // TLS
        "cf.tls_version",
        "cf.tls_cipher",
        "cf.tls_client_random",
        "cf.tls_ciphers_sha1",
        "cf.tls_client_extensions_sha1",
        "cf.tls_client_extensions_sha1_le",
        "cf.bot_management.ja4",
        // mTLS client certificate
        "cf.tls_client_auth.cert_serial",
        "cf.tls_client_auth.cert_issuer_serial",
        "cf.tls_client_auth.cert_ski",
        "cf.tls_client_auth.cert_issuer_ski",
        "cf.tls_client_auth.cert_subject_dn",
        "cf.tls_client_auth.cert_subject_dn_legacy",
        "cf.tls_client_auth.cert_subject_dn_rfc2253",
        "cf.tls_client_auth.cert_issuer_dn",
        "cf.tls_client_auth.cert_issuer_dn_legacy",
        "cf.tls_client_auth.cert_issuer_dn_rfc2253",
        "cf.tls_client_auth.cert_not_before",
        "cf.tls_client_auth.cert_not_after",
        "cf.tls_client_auth.cert_fingerprint_sha1",
        "cf.tls_client_auth.cert_fingerprint_sha256",
        "cf.tls_client_auth.cert_rfc9440",
        "cf.tls_client_auth.cert_chain_rfc9440",
        // WAF
        "cf.waf.score.class",
        // Misc dynamic
        "cf.ray_id",
        // Magic Firewall
        "ip.proto",
      ),

    array_number_field: ($) =>
      choice(
        "cf.bot_management.detection_ids",
        "cf.waf.content_scan.obj_sizes",
        "http.request.jwt.claims.iat.sec.values",
        "http.request.jwt.claims.nbf.sec.values",
      ),

    // Map<Array<Integer>> — keyed by token-config id, yields an integer array.
